--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -1,3 +1,35 @@
+@font-face {
+    font-family: 'NanumSquareOTF';
+    font-style: normal;
+    src: url('../public/assets/fonts/NanumSquareR.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'NanumSquareOTF';
+    font-weight: bold;
+    src: url('../public/assets/fonts/NanumSquareB.otf') format('embedded-opentype');
+}
+
+@font-face {
+    font-family: 'NanumSquareOTF';
+    font-weight: 800;
+    font-style: normal;
+    src: url('../public/assets/fonts/NanumSquareEB.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'NanumBarunGothic';
+    font-style: normal;
+    src: url('../public/assets/fonts/NanumBarunGothic.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'NanumBarunGothic';
+    font-weight: bold;
+    src: url('../public/assets/fonts/NanumBarunGothicBold.otf') format('opentype');
+}
+
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
