Update: UserInfo - Network Add, Network Delete, EventSelectModal, Sidebar ...

--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -7,7 +7,7 @@
 @font-face {
     font-family: 'NanumSquareOTF';
     font-weight: bold;
-    src: url('../public/assets/fonts/NanumSquareB.otf') format('embedded-opentype');
+    src: url('../public/assets/fonts/NanumSquareB.otf') format('opentype');
 }
 
 @font-face {
