--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -31,9 +31,7 @@
 
 
 body {
-    font-family: NanumSquareOTF, NanumBarunGothic, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    font-family: NanumSquareOTF, NanumBarunGothic, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
